Fix GetTopWorker andAdd GetTopBranch
