# api/api.go
@@ -53,6 +53,7 @@ func NewApi(r *gin.Engine, cfg *config.Config, storage storage.StorageI, logger 
 
 	// Business Process Api
 	r.GET("/business_process", handler.GetTopWorker)
+	r.GET("/business_process_branch", handler.GetTopBranch)
 
 	url := ginSwagger.URL("swagger/doc.json") // The url pointing to API definition
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler, url))
